[gd_scene load_steps=15 format=3 uid="uid://dd7gnst6h1jrw"]

[ext_resource type="Script" uid="uid://h2i7r6cxgvay" path="res://assets/ui/menu.gd" id="1_5w2xh"]
[ext_resource type="FontFile" uid="uid://cr0yvyxxbpnkg" path="res://assets/ui/Ithaca-LVB75.ttf" id="1_lti8b"]
[ext_resource type="AudioStream" uid="uid://bqvcu52vi6mcc" path="res://assets/camera/music.mp3" id="3_eroip"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wde4o"]
bg_color = Color(0.09019608, 0.08235294, 0.18039216, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5w2xh"]
font = ExtResource("1_lti8b")
font_size = 32

[sub_resource type="GDScript" id="GDScript_lti8b"]
script/source = "@tool
extends Label
## Displays the value of `application/config/version`, set in project settings.

const NO_VERSION_STRING : String = \"0.0.0\"

## Prefixes the value of `application/config/version` when displaying to the user.
@export var version_prefix : String = \"v\"

func update_version_label() -> void:
	var config_version : String = ProjectSettings.get_setting(\"application/config/version\", NO_VERSION_STRING)
	if config_version.is_empty():
		config_version = NO_VERSION_STRING
	text = version_prefix + config_version

func _ready() -> void:
	update_version_label()
"

[sub_resource type="LabelSettings" id="LabelSettings_ouk20"]
font = ExtResource("1_lti8b")
font_size = 80
font_color = Color(0.89411765, 0.19607843, 0.32941177, 1)
outline_size = 12
shadow_size = 16
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4, 2)

[sub_resource type="Animation" id="Animation_ouk20"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 80)]
}

[sub_resource type="Animation" id="Animation_lti8b"]
resource_name = "titlebounce"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75, 1.5),
"transitions": PackedFloat32Array(2.0000007, 0.4829682, 0.25881606),
"update": 0,
"values": [Vector2(-68.5, -30), Vector2(-68.5, 15), Vector2(-68.5, -30)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mae5d"]
_data = {
&"RESET": SubResource("Animation_ouk20"),
&"titlebounce": SubResource("Animation_lti8b")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0i6ep"]
bg_color = Color(0.09019608, 0.08235294, 0.18039216, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.89411765, 0.19607843, 0.32941177, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_top = 2.0
expand_margin_bottom = 2.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eroip"]
bg_color = Color(0.89411765, 0.19607843, 0.32941177, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.09019608, 0.08235294, 0.18039216, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_top = 2.0
expand_margin_bottom = 2.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5w2xh"]
bg_color = Color(0.89411765, 0.19607843, 0.32941177, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.09019608, 0.08235294, 0.18039216, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_top = 2.0
expand_margin_bottom = 2.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l0v7b"]
bg_color = Color(1, 1, 1, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 2.0
expand_margin_top = 4.0
expand_margin_right = 2.0
expand_margin_bottom = 4.0
anti_aliasing = false

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5w2xh")

[node name="bg" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wde4o")

[node name="BackgroundMusicPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("3_eroip")
volume_db = -15.0
autoplay = true

[node name="BackgroundTextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="VersionMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VersionContainer" type="Control" parent="VersionMargin"]
layout_mode = 2
mouse_filter = 2

[node name="VersionLabel" type="Label" parent="VersionMargin/VersionContainer"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -26.0
grow_horizontal = 0
grow_vertical = 0
text = "v0.0.0"
label_settings = SubResource("LabelSettings_5w2xh")
horizontal_alignment = 2
script = SubResource("GDScript_lti8b")

[node name="MenuContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleMargin" type="MarginContainer" parent="MenuContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = 24

[node name="TitleContainer" type="Control" parent="MenuContainer/TitleMargin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2

[node name="TitleLabel" type="Label" parent="MenuContainer/TitleMargin/TitleContainer"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 4.0
offset_top = 80.0
offset_right = 141.0
offset_bottom = 167.99988
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "AntI"
label_settings = SubResource("LabelSettings_ouk20")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitleAnimationPlayer" type="AnimationPlayer" parent="MenuContainer/TitleMargin/TitleContainer/TitleLabel"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_mae5d")
}

[node name="MenuButtonsMargin" type="MarginContainer" parent="MenuContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 136
theme_override_constants/margin_bottom = 8

[node name="MenuButtonsContainer" type="Control" parent="MenuContainer/MenuButtonsMargin"]
layout_mode = 2
mouse_filter = 2

[node name="MenuButtonsBoxContainer" type="BoxContainer" parent="MenuContainer/MenuButtonsMargin/MenuButtonsContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
theme_override_constants/separation = 16
alignment = 1
vertical = true

[node name="NewGameButton" type="Button" parent="MenuContainer/MenuButtonsMargin/MenuButtonsContainer/MenuButtonsBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_lti8b")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_0i6ep")
theme_override_styles/pressed = SubResource("StyleBoxFlat_eroip")
theme_override_styles/hover = SubResource("StyleBoxFlat_5w2xh")
theme_override_styles/focus = SubResource("StyleBoxFlat_l0v7b")
text = "Start"

[node name="CreditsButton" type="Button" parent="MenuContainer/MenuButtonsMargin/MenuButtonsContainer/MenuButtonsBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_lti8b")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_0i6ep")
theme_override_styles/pressed = SubResource("StyleBoxFlat_eroip")
theme_override_styles/hover = SubResource("StyleBoxFlat_5w2xh")
theme_override_styles/focus = SubResource("StyleBoxFlat_l0v7b")
text = "Credits"

[node name="ExitButton" type="Button" parent="MenuContainer/MenuButtonsMargin/MenuButtonsContainer/MenuButtonsBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_lti8b")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_0i6ep")
theme_override_styles/pressed = SubResource("StyleBoxFlat_eroip")
theme_override_styles/hover = SubResource("StyleBoxFlat_5w2xh")
theme_override_styles/focus = SubResource("StyleBoxFlat_l0v7b")
text = "Exit"

[connection signal="pressed" from="MenuContainer/MenuButtonsMargin/MenuButtonsContainer/MenuButtonsBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MenuContainer/MenuButtonsMargin/MenuButtonsContainer/MenuButtonsBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MenuContainer/MenuButtonsMargin/MenuButtonsContainer/MenuButtonsBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
